--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,8 @@
                     <div class="container">
                         <div class="copyright__inner">
                              <span>&copy; 2018-2022 RitmStyle</span>
-                             <span>Сделано d-e-n.info</span>
+                             <span>Верстка greiika</span>
+                             <span>Макет разработан d-e-n.info</span>
                         </div>
                     </div>
                 </div>
